@@ -14,17 +14,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-<build> 
- <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-plugin</artifactId>
-  <configuration>
-    <forkCount>3</forkCount>
-    <reuseForks>true</reuseForks>
-    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-  </configuration>
-</plugin>
-</build>
   <!--distributionManagement>
 
 		<repository>
